[package]
name = "got"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
axum = "0.6.18"
serde_json = "1.0.97"
serde = "1.0.164" 
mongodb = "2.5.0"
