[package]
name = "godbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
anyhow = "1.0.71"
axum = "0.6.18"
serde_json = "1.0.97"
serde = "1.0.164" 
mongodb = "2.5.0"
petgraph = { version = "0.6.3", features = ["serde-1"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tower = "0.4.13"
